--- a/AppFluxoDeCaixa/Views/Clientes/Create.cshtml
+++ b/AppFluxoDeCaixa/Views/Clientes/Create.cshtml
@@ -88,6 +88,11 @@
                 <span asp-validation-for="Observacao" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="numero" class="control-label"></label>
+                <input asp-for="numero" class="form-control" />
+                <span asp-validation-for="numero" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
