--- a/AppFluxoDeCaixa/Views/Clientes/Details.cshtml
+++ b/AppFluxoDeCaixa/Views/Clientes/Details.cshtml
@@ -100,6 +100,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Observacao)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.numero)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.numero)
+        </dd>
     </dl>
 </div>
 <div>
