--- a/AppFluxoDeCaixa/Views/Home/Index.cshtml
+++ b/AppFluxoDeCaixa/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Pagina Inicial";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">App Fluxo de Caixa</h1>
+    <p class="lead">Projeto desenvolvido com ASP.NET core 8 e Bootstrap 5.3</p>
 </div>
