--- a/AppFluxoDeCaixa/Views/Clientes/Create.cshtml
+++ b/AppFluxoDeCaixa/Views/Clientes/Create.cshtml
@@ -1,8 +1,9 @@
 ﻿@model AppFluxoDeCaixa.Models.Clientes
 
 @{
-    ViewData["Title"] = "Adicionar Cliente";
+    ViewData["Title"] = "Create";
 }
+
 <h1 class="display-5 text-light text-center">Adicionar Cliente</h1>
 
 <hr />
